Version Next

    - Fixed bug with bulk delete HTTP requests (issue #211)
    - Check for errors returned by curl_easy_setopt()
    - Added --noCurlCache flag to facilitate debugging
    - Bump wait time for nbdkit to start from 1s to 5s

Version 2.1.0 released September 23, 2023

    - Avoid sending an empty Accept-Encoding header (issue #208)
    - Use fallocate(FALLOC_FL_PUNCH_HOLE) for empty disk cache blocks (issue #200)
    - Made sync(1) work on s3backer file to flush cached data (issue #197)
    - Fixed bug where s3b_compress=deflate NDB flag would fail (issue #195)
    - Fixed bug in zero cache "current_cache_size" stats value (issue #204)
    - Reuse cURL handles after normal HTTP error codes (issue #199)
    - Run modprobe(8) if needed when starting with the --nbd flag (issue #203)
    - Use newer OpenSSL 3.0 API functions when available

Version 2.0.2 released July 17, 2022

    - Fixed bugs with the --nbd flag when not also using -f flag (issue #188)
    - Fixed free() of invalid pointer bug in zero_cache.c (issue #191)
    - Added support for zstd compression (pr #187)

Version 2.0.1 released June 4, 2022

    - Fix null pointer dereference bug in zero cache.

Version 2.0.0 released June 4, 2022

    - Support running as a Network Block Device (NBD) server (issue #178)
    - Fix slow write performance with large block sizes since 1.6.0 (issue ##185)
    - Disable MD5 cache by default now that Amazon S3 is consistent (issue #183)
    - Fix bug where "(null)" was appearing in usage message (issue #161)
    - Give more meaningful usage error when size limits are exceeded (issue #162)
    - Added flag "--http11" to restrict cURL to HTTP 1.1 (issue #168)
    - Clean up mount token if FUSE itself fails to start (issue #175)
    - Detect HTTP redirects and emit appropriate hint/warning (issue #174)
    - Added man page reference to Linux bcache (issue #169)
    - Added "--blockCacheFileAdvise" flag (pr #176)
    - Treat 3xx HTTP response codes as errors
